--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="https://www.instagram.com/glance_frm_lens/" target="_blank"><i class='bx bxl-instagram' ></i></a>
                 <a href="https://twitter.com/sahu_suman_9?t=1qeJY0gOzJsSzGW8G4-0BA&s=09" target="_blank"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1gesjxhqGJ3R14pe5ggBWzpRgduKtwN0_/view?usp=sharing" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
