--- a/index.html
+++ b/index.html
@@ -1,196 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Portfolio Website | Suman</title>
 
-
     <!--Box Icons-->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <!--Custom css-->
 
-
-
-
-    <link rel="stylesheet" href="./stryle.css">
-</head>
-<body>
-    
-
+    <link rel="stylesheet" href="./stryle.css" />
+  </head>
+  <body>
     <!--header design-->
 
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">Portfolio</a>
 
-        <i class='bx bx-menu' id="menu-icon"></i>
+      <i class="bx bx-menu" id="menu-icon"></i>
 
-        <nav class="navbar">
-            <a href="#home" class="active">HOME</a>
-            <a href="#about">ABOUT</a>
-            <a href="#services">SERVICES</a>
-            <a href="#portfolio">PORTFOLIO</a>
-            <a href="#contact">CONTACT</a>
-        </nav>
+      <nav class="navbar">
+        <a href="#home" class="active">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#services">SERVICES</a>
+        <a href="#portfolio">PORTFOLIO</a>
+        <a href="#contact">CONTACT</a>
+      </nav>
     </header>
-
 
     <!--home section design-->
 
     <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello, It's Me</h3>
-            <h1>Suman Kumar Sahu</h1>
-            <h3>And I'm a <span id="element"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic et, doloribus necessitatibus dignissimos 
-                consectetur aspernatur molestias magnam.</p>
-            <div class="social-media">
-                <a href="https://github.com/sahusuman9" target="_blank"><i class='bx bxl-github' ></i></a>
-                <a href="https://www.linkedin.com/in/suman-sahu-78b601219/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://www.instagram.com/glance_frm_lens/" target="_blank"><i class='bx bxl-instagram' ></i></a>
-                <a href="https://twitter.com/sahu_suman_9?t=1qeJY0gOzJsSzGW8G4-0BA&s=09" target="_blank"><i class='bx bxl-twitter' ></i></a>
-            </div>
-            <a href="https://drive.google.com/file/d/1gesjxhqGJ3R14pe5ggBWzpRgduKtwN0_/view?usp=sharing"  target="_blank" class="btn">Download CV</a>
+      <div class="home-content">
+        <h3>Hello, It's Me</h3>
+        <h1>Suman Kumar Sahu</h1>
+        <h3>And I'm a <span id="element"></span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic et,
+          doloribus necessitatibus dignissimos consectetur aspernatur molestias
+          magnam.
+        </p>
+        <div class="social-media">
+          <a href="https://github.com/sahusuman9" target="_blank"
+            ><i class="bx bxl-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/suman-sahu-78b601219/"
+            target="_blank"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+          <a href="https://www.instagram.com/glance_frm_lens/" target="_blank"
+            ><i class="bx bxl-instagram"></i
+          ></a>
+          <a
+            href="https://twitter.com/sahu_suman_9?t=1qeJY0gOzJsSzGW8G4-0BA&s=09"
+            target="_blank"
+            ><i class="bx bxl-twitter"></i
+          ></a>
         </div>
+        <a
+          href="https://drive.google.com/file/d/1gesjxhqGJ3R14pe5ggBWzpRgduKtwN0_/view?usp=sharing"
+          target="_blank"
+          class="btn"
+          >Download CV</a
+        >
+      </div>
 
-        <div class="home-img">
-            <img src="./1.png" />
-        </div>
+      <div class="home-img">
+        <img src="./1.png" />
+      </div>
     </section>
-
-
 
     <!--About section design-->
 
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="./2.png">
-        </div>
+      <div class="about-img">
+        <img src="./2.png" />
+      </div>
 
-        <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <h3>Front-End Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, distinctio! Vero reiciendis 
-                earum laboriosam dignissimos ullam exercitationem accusantium fugit odit iusto. Autem veniam sed aliquid accusantium a deserunt magni ex dolorem reprehenderit harum dolore laborum sunt quam pariatur unde molestias officia cum vel, odit amet in.</p>
-            <a href="#" class="btn">Read More</a>
-        </div>
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Front-End Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae,
+          distinctio! Vero reiciendis earum laboriosam dignissimos ullam
+          exercitationem accusantium fugit odit iusto. Autem veniam sed aliquid
+          accusantium a deserunt magni ex dolorem reprehenderit harum dolore
+          laborum sunt quam pariatur unde molestias officia cum vel, odit amet
+          in.
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
     </section>
-
 
     <!--Services section design-->
     <section class="services" id="services">
-        <h2 class="heading">Our <span>Services</span></h2>
+      <h2 class="heading">Our <span>Services</span></h2>
 
-        <div class="services-container">
-
-            <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid blanditiis ab dolor voluptas 
-                    laudantium iusto voluptates ratione aut eos nobis?</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-react'></i>
-                <h3>Front-End Development</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid blanditiis ab dolor voluptas 
-                    laudantium iusto voluptates ratione aut eos nobis?</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-nodejs'></i>
-                <h3>Back-End Development</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid blanditiis ab dolor voluptas 
-                    laudantium iusto voluptates ratione aut eos nobis?</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
+      <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+            blanditiis ab dolor voluptas laudantium iusto voluptates ratione aut
+            eos nobis?
+          </p>
+          <a href="#" class="btn">Read More</a>
         </div>
+
+        <div class="services-box">
+          <i class="bx bxl-react"></i>
+          <h3>Front-End Development</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+            blanditiis ab dolor voluptas laudantium iusto voluptates ratione aut
+            eos nobis?
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bxl-nodejs"></i>
+          <h3>Back-End Development</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid
+            blanditiis ab dolor voluptas laudantium iusto voluptates ratione aut
+            eos nobis?
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+      </div>
     </section>
-
-
 
     <!--Portfolio design part-->
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">My <span>Projects</span></h2>
+      <h2 class="heading">My <span>Projects</span></h2>
 
-        <div class="portfolio-container">
-
-            <div class="portfolio-box">
-                <img src="./a.jpg">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, repellat?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./e.jpg">
-                <div class="portfolio-layer">
-                    <h4>Front-End Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, repellat?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="./f.jpg">
-                <div class="portfolio-layer">
-                    <h4>Back-End Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, repellat?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="./a.jpg" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi, repellat?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
         </div>
-    </section>
 
+        <div class="portfolio-box">
+          <img src="./e.jpg" />
+          <div class="portfolio-layer">
+            <h4>Front-End Development</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi, repellat?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="./f.jpg" />
+          <div class="portfolio-layer">
+            <h4>Back-End Development</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi, repellat?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--Contact design-->
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">Contact <span>Me!</span></h2>
 
-       <form action="#">
+      <form action="#" onsubmit="sendEmail(); reset(); return false;">
         <div class="input-box">
-            <input type="text" placeholder="Full Name">
-            <input type="email" placeholder="Email Address">
+          <input type="text" id="name" placeholder="Full Name" />
+          <input type="email" id="email" placeholder="Email Address" />
         </div>
 
         <div class="input-box">
-            <input type="number" placeholder="Mobile Number">
-            <input type="text" placeholder="Email Subject">
+          <input type="number" id="phone" placeholder="Mobile Number" />
+          <input type="text" id="subject" placeholder="Email Subject" />
         </div>
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-        <input type="submit" value="Send Message" class="btn">
-       </form>
+        <textarea
+          name=""
+          id="message"
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="submit" value="Send Message" class="btn" />
+      </form>
     </section>
-
 
     <!--Footer Design-->
 
     <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2023 by Suman Kumar Sahu | All Rights Reserved.</p>
-        </div>
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Suman Kumar Sahu | All Rights Reserved.</p>
+      </div>
 
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
-        </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+      </div>
     </footer>
-
 
     <!--scroll reveal-->
 
     <script src="https://unpkg.com/scrollreveal"></script>
-
-
-
 
     <!--Custom JS-->
 
@@ -198,18 +228,38 @@
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
-   <script>
-    //Setup and start animation!
+    <script>
+      //Setup and start animation!
 
-  var typed = new Typed("#element", {
-    strings: [
-      "Front-End Developer",
-    ],
-    typeSpeed: 100,
-    backSpeed: 100,
-    backdelay: 1000,
-    loop: true
-  });
-   </script>
-</body>
+      var typed = new Typed("#element", {
+        strings: ["Front-End Developer"],
+        typeSpeed: 100,
+        backSpeed: 100,
+        backdelay: 1000,
+        loop: true,
+      });
+    </script>
+
+    <script src=" https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+      function sendEmail() {
+        Email.send({
+          SecureToken: "20087c6c-4b45-4059-b5d0-d7fb5e437307",
+
+          To: "boathead9091@gmail.com",
+          From: document.getElementById("email").value,
+          Subject: document.getElementById("subject").value,
+          Body:
+            "Name: " +
+            document.getElementById("name").value +
+            "<br> Email:" +
+            document.getElementById("email").value +
+            "<br> Phone: " +
+            documnet.getElementById("phone").value +
+            "<br> Message: " +
+            document.getElementById("message").value,
+        }).then((message) => alert("Message Sent Successfully"));
+      }
+    </script>
+  </body>
 </html>
