--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="#" onsubmit="sendEmail(); reset(); return false;">
+      <form action="#">
         <div class="input-box">
           <input type="text" id="name" placeholder="Full Name" />
           <input type="email" id="email" placeholder="Email Address" />
@@ -202,7 +202,7 @@
           rows="10"
           placeholder="Your Message"
         ></textarea>
-        <input type="submit" value="Send Message" class="btn" />
+        <input type="submit"  value="Send Message" class="btn" />
       </form>
     </section>
 
@@ -240,26 +240,6 @@
       });
     </script>
 
-    <script src=" https://smtpjs.com/v3/smtp.js"></script>
-    <script>
-      function sendEmail() {
-        Email.send({
-          SecureToken: "20087c6c-4b45-4059-b5d0-d7fb5e437307",
-
-          To: "boathead9091@gmail.com",
-          From: document.getElementById("email").value,
-          Subject: document.getElementById("subject").value,
-          Body:
-            "Name: " +
-            document.getElementById("name").value +
-            "<br> Email:" +
-            document.getElementById("email").value +
-            "<br> Phone: " +
-            documnet.getElementById("phone").value +
-            "<br> Message: " +
-            document.getElementById("message").value,
-        }).then((message) => alert("Message Sent Successfully"));
-      }
     </script>
   </body>
 </html>
