--- a/index.html
+++ b/index.html
@@ -185,19 +185,19 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="#">
+      <form action="https://formspree.io/f/mzblbknl"
+      method="POST">
         <div class="input-box">
-          <input type="text" id="name" placeholder="Full Name" />
-          <input type="email" id="email" placeholder="Email Address" />
+          <input type="text" name="name" placeholder="Full Name" />
+          <input type="email" name="email" placeholder="Email Address" />
         </div>
 
         <div class="input-box">
-          <input type="number" id="phone" placeholder="Mobile Number" />
-          <input type="text" id="subject" placeholder="Email Subject" />
+          <input type="number" name="phone" placeholder="Mobile Number" />
+          <input type="text" name="subject" placeholder="Email Subject" />
         </div>
         <textarea
-          name=""
-          id="message"
+          name="message"
           cols="30"
           rows="10"
           placeholder="Your Message"
